@@ -1,6 +1,8 @@
 - Bail out if 'mbstring.func_overload' is set.  We need the standard string
   functions to behave as originally defined.
 - Tweak web-file-browser.php example to work in an existing web server setup.
+- Fix bug with file uploads, triggered when a chunked upload request succeeds
+  but the response doesn't get back to us.
 
 ---------------------------------------------
 1.1.1 (2013-08-21)
